--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <main>
         <h2>Week1 demo</h2>
         <p>We are learning about GitHub and Repos.</p>
+        <p>Now we are moving to github pages</p>
    </main>
    <footer>
 
